--- a/css/home.css
+++ b/css/home.css
@@ -4,6 +4,10 @@
     Last modified by: Sam Lohbeck
 */
 
+:root {
+    --myWidth: 100%;
+}
+
 /* Reset CSS */
 * {
     margin: 0;
@@ -12,16 +16,16 @@
 
 /* Body CSS */
 body {
-    width: 100%;
-    height: 100%;
+    height: auto;
+    width: auto;
 }
 
 /* Grid setup  */
 .gridContainer {
     /* Layout Properties */
     display: grid;
-    grid: 110px 970px 56px / 252px 1363px 305px;
-    grid: 10.1;
+    grid: 55px  970px 56px / 252px 1363px 305px;
+
     grid-template-areas: 
     'header header header'
     'nav main section'
