--- a/css/home.css
+++ b/css/home.css
@@ -1,7 +1,7 @@
 /*
     Author: Kettle Team
-    Last modified: 3/10/20
-    Last modified by: Sam Lohbeck
+    Last modified: 5/05/20
+    Last modified by: Hunter Holderfield
 */
 
 /* Reset CSS */
@@ -21,7 +21,7 @@
     height: 100vh;
     /* Layout Properties */
     display: grid;
-    grid:  6% 89% 5% / 15% 70% 15% ;
+    grid:  6% 90.5% 5% / 15% 69% 15% ;
 
     grid-template-areas: 
     'header header header'
